feat: implementing dashboard changes
